@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-project}/commits/mast
 == Unreleased
 
 * add support for `indexterm` and `intexterm2` inline macros
+* add support for inline callouts
 
 == 0.4.0 (2021-02-14) - @slonopotamus
 
